Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 5.0.0-beta1
-
None
-
-
90ff9be54a87fb0d7ddbfdfe0245b05aa9927d25
Description
To reproduce:
1. Load Creator project
2. Ctrl+Shift+F | select Scope: C++ Symbols | type Search for: QString | press Search button.
3. Wait couple of seconds -> crash
Call stack:
Thread 1 (Thread 0x7f015a4ec380 (LWP 174058)): #0 0x00007f0142d03f86 in Core::Internal::SearchResultTreeItem::rowOfItem (this=0x0) at /home/jarek/dev/creator-master/src/plugins/coreplugin/find/searchresulttreeitems.cpp:73 #1 0x00007f0142d0576c in Core::Internal::SearchResultTreeModel::parent (this=0x4a6db40, idx=...) at /home/jarek/dev/creator-master/src/plugins/coreplugin/find/searchresulttreemodel.cpp:184 #2 0x00007f015e2cd1cc in QModelIndex::parent (this=0x54c35e0) at /home/jarek/dev/qt-515/qtbase/src/corelib/itemmodels/qabstractitemmodel.h:443 #3 0x00007f015e2f7395 in QSortFilterProxyModelPrivate::_q_sourceDataChanged (this=0x2d7b4d0, source_top_left=..., source_bottom_right=..., roles=...) at /home/jarek/dev/qt-515/qtbase/src/corelib/itemmodels/qsortfilterproxymodel.cpp:1405 #4 0x00007f015e2fcdd0 in QSortFilterProxyModel::qt_static_metacall (_o=0x17e4270, _c=QMetaObject::InvokeMetaMethod, _id=15, _a=0x7ffff6c22f70) at .moc/moc_qsortfilterproxymodel.cpp:275 #5 0x00007f015e37e34b in doActivate<false> (sender=0x4a6db40, signal_index=3, argv=0x7ffff6c22f70) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobject.cpp:3898 #6 0x00007f015e377ca9 in QMetaObject::activate (sender=0x4a6db40, m=0x7f015e71c220 <QAbstractItemModel::staticMetaObject>, local_signal_index=0, argv=0x7ffff6c22f70) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobject.cpp:3946 #7 0x00007f015e2cc057 in QAbstractItemModel::dataChanged (this=0x4a6db40, _t1=..., _t2=..., _t3=...) at .moc/moc_qabstractitemmodel.cpp:557 #8 0x00007f0142d05e0a in Core::Internal::SearchResultTreeModel::updateCheckStateFromChildren (this=0x4a6db40, idx=..., item=0x2d52cb0) at /home/jarek/dev/creator-master/src/plugins/coreplugin/find/searchresulttreemodel.cpp:285 #9 0x00007f0142d06ce2 in Core::Internal::SearchResultTreeModel::addResultsToCurrentParent (this=0x4a6db40, items=..., mode=Core::SearchResult::AddSorted) at /home/jarek/dev/creator-master/src/plugins/coreplugin/find/searchresulttreemodel.cpp:426 #10 0x00007f0142d072e8 in Core::Internal::SearchResultTreeModel::addResults (this=0x4a6db40, items=..., mode=Core::SearchResult::AddSorted) at /home/jarek/dev/creator-master/src/plugins/coreplugin/find/searchresulttreemodel.cpp:469 #11 0x00007f0142d07f02 in Core::Internal::SearchResultFilterModel::addResults (this=0x17e4270, items=..., mode=Core::SearchResult::AddSorted) at /home/jarek/dev/creator-master/src/plugins/coreplugin/find/searchresulttreemodel.cpp:596 #12 0x00007f0142d10373 in Core::Internal::SearchResultTreeView::addResults (this=0x5534050, items=..., mode=Core::SearchResult::AddSorted) at /home/jarek/dev/creator-master/src/plugins/coreplugin/find/searchresulttreeview.cpp:97 #13 0x00007f0142d13182 in Core::Internal::SearchResultWidget::addResults (this=0x3cdcf30, items=..., mode=Core::SearchResult::AddSorted) at /home/jarek/dev/creator-master/src/plugins/coreplugin/find/searchresultwidget.cpp:254 #14 0x00007f0142d18747 in Core::SearchResult::addResults (this=0x1886e80, items=..., mode=Core::SearchResult::AddSorted) at /home/jarek/dev/creator-master/src/plugins/coreplugin/find/searchresultwindow.cpp:833 #15 0x00007f0141a569aa in CppTools::Internal::SymbolsFindFilter::addResults (this=0x1a23560, begin=90, end=91) at /home/jarek/dev/creator-master/src/plugins/cpptools/symbolsfindfilter.cpp:164 #16 0x00007f0141a5bc39 in QtPrivate::FunctorCall<QtPrivate::IndexesList<0, 1>, QtPrivate::List<int, int>, void, void (CppTools::Internal::SymbolsFindFilter::*)(int, int)>::call (f=(void (CppTools::Internal::SymbolsFindFilter::*)(CppTools::Internal::SymbolsFindFilter * const, int, int)) 0x7f0141a56872 <CppTools::Internal::SymbolsFindFilter::addResults(int, int)>, o=0x1a23560, arg=0x7ffff6c237b0) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobjectdefs_impl.h:152 #17 0x00007f0141a5b6bc in QtPrivate::FunctionPointer<void (CppTools::Internal::SymbolsFindFilter::*)(int, int)>::call<QtPrivate::List<int, int>, void> (f=(void (CppTools::Internal::SymbolsFindFilter::*)(CppTools::Internal::SymbolsFindFilter * const, int, int)) 0x7f0141a56872 <CppTools::Internal::SymbolsFindFilter::addResults(int, int)>, o=0x1a23560, arg=0x7ffff6c237b0) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobjectdefs_impl.h:185 #18 0x00007f0141a5ac49 in QtPrivate::QSlotObject<void (CppTools::Internal::SymbolsFindFilter::*)(int, int), QtPrivate::List<int, int>, void>::impl (which=1, this_=0x17003d0, r=0x1a23560, a=0x7ffff6c237b0, ret=0x0) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobjectdefs_impl.h:418 #19 0x00007f015e33ebc9 in QtPrivate::QSlotObjectBase::call (this=0x17003d0, r=0x1a23560, a=0x7ffff6c237b0) at ../../include/QtCore/../../../../qt-515/qtbase/src/corelib/kernel/qobjectdefs_impl.h:398 #20 0x00007f015e37e2b2 in doActivate<false> (sender=0x3027bd0, signal_index=9, argv=0x7ffff6c237b0) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobject.cpp:3886 #21 0x00007f015e377ca9 in QMetaObject::activate (sender=0x3027bd0, m=0x7f015e719360 <QFutureWatcherBase::staticMetaObject>, local_signal_index=6, argv=0x7ffff6c237b0) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobject.cpp:3946 #22 0x00007f015e0d0cf1 in QFutureWatcherBase::resultsReadyAt (this=0x3027bd0, _t1=90, _t2=91) at .moc/moc_qfuturewatcher.cpp:305 #23 0x00007f015e0d0350 in QFutureWatcherBasePrivate::sendCallOutEvent (this=0x2d7b9d0, event=0x7f002a586e20) at /home/jarek/dev/qt-515/qtbase/src/corelib/thread/qfuturewatcher.cpp:467 #24 0x00007f015e0cfbd4 in QFutureWatcherBase::event (this=0x3027bd0, event=0x7f002a586e20) at /home/jarek/dev/qt-515/qtbase/src/corelib/thread/qfuturewatcher.cpp:334 #25 0x00007f015f3bcba3 in QApplicationPrivate::notify_helper (this=0x118b600, receiver=0x3027bd0, e=0x7f002a586e20) at /home/jarek/dev/qt-515/qtbase/src/widgets/kernel/qapplication.cpp:3637 #26 0x00007f015f3b9f93 in QApplication::notify (this=0x7ffff6c24570, receiver=0x3027bd0, e=0x7f002a586e20) at /home/jarek/dev/qt-515/qtbase/src/widgets/kernel/qapplication.cpp:2977 #27 0x00007f015e32d66c in QCoreApplication::notifyInternal2 (receiver=0x3027bd0, event=0x7f002a586e20) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qcoreapplication.cpp:1064 #28 0x00007f015e32e034 in QCoreApplication::sendEvent (receiver=0x3027bd0, event=0x7f002a586e20) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qcoreapplication.cpp:1462 #29 0x00007f015e32ed19 in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x11841e0) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qcoreapplication.cpp:1821 #30 0x00007f015e32e6ba in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qcoreapplication.cpp:1680 #31 0x00007f015e3bce60 in postEventSourceDispatch (s=0x118d560) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:277 #32 0x00007f015ae504cf in g_main_context_dispatch () from /lib64/libglib-2.0.so.0 #33 0x00007f015aea44e8 in g_main_context_iterate.constprop () from /lib64/libglib-2.0.so.0 #34 0x00007f015ae4dc03 in g_main_context_iteration () from /lib64/libglib-2.0.so.0 #35 0x00007f015e3bd59c in QEventDispatcherGlib::processEvents (this=0x124a5a0, flags=...) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:423 #36 0x00007f014ce520f4 in QXcbGlibEventDispatcher::processEvents (this=0x124a5a0, flags=...) at /home/jarek/dev/qt-515/qtbase/src/plugins/platforms/xcb/qxcbeventdispatcher.cpp:143 #37 0x00007f015e329ffb in QEventLoop::processEvents (this=0x7ffff6c24350, flags=...) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qeventloop.cpp:139 #38 0x00007f015e32a305 in QEventLoop::exec (this=0x7ffff6c24350, flags=...) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qeventloop.cpp:232 #39 0x00007f015e32de84 in QCoreApplication::exec () at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qcoreapplication.cpp:1375 #40 0x00007f015eacd938 in QGuiApplication::exec () at /home/jarek/dev/qt-515/qtbase/src/gui/kernel/qguiapplication.cpp:1867 #41 0x00007f015f3b998f in QApplication::exec () at /home/jarek/dev/qt-515/qtbase/src/widgets/kernel/qapplication.cpp:2829 #42 0x000000000040ea51 in main (argc=1, argv=0x7ffff6c24e78) at /home/jarek/dev/creator-master/src/app/main.cpp:815 Thread 2 (Thread 0x7f01067b4640 (LWP 176152)): #0 0x00007f01418f4387 in std::__atomic_base<int>::operator++ (this=0x7f00e7962930) at /usr/include/c++/11/bits/atomic_base.h:376 #1 0x00007f01418f3200 in QAtomicOps<int>::ref<int> (_q_value=...) at /home/jarek/dev/qt-515/qtbase/src/corelib/thread/qatomic_cxx11.h:283 #2 0x00007f01418f2266 in QBasicAtomicInteger<int>::ref (this=0x7f00e7962930) at /home/jarek/dev/qt-515/qtbase/src/corelib/thread/qbasicatomic.h:118 #3 0x00007f01418f3ce2 in QSharedPointer<CPlusPlus::Document>::ref (this=0x7f01067b3930) at /home/jarek/dev/qt-515/qtbase/src/corelib/tools/qsharedpointer_impl.h:503 #4 0x00007f01418f2d71 in QSharedPointer<CPlusPlus::Document>::QSharedPointer (this=0x7f01067b3930, other=...) at /home/jarek/dev/qt-515/qtbase/src/corelib/tools/qsharedpointer_impl.h:327 #5 0x00007f0141916420 in (anonymous namespace)::BuiltinSymbolSearcher::runSearch (this=0x2d7bc70, future=...) at /home/jarek/dev/creator-master/src/plugins/cpptools/builtinindexingsupport.cpp:322 #6 0x00007f0141a5c84e in Utils::Internal::MemberCallable<void (CppTools::SymbolSearcher::*)(QFutureInterface<Core::SearchResultItem>&)>::operator() (this=0x7f01067b3a90, args#0=...) at /home/jarek/dev/creator-master/src/libs/utils/runextensions.h:227 #7 0x00007f0141a5c7d0 in Utils::Internal::runAsyncQFutureInterfaceDispatch<Core::SearchResultItem, Utils::Internal::MemberCallable<void (CppTools::SymbolSearcher::*)(QFutureInterface<Core::SearchResultItem>&)>>(std::integral_constant<bool, true>, QFutureInterface<Core::SearchResultItem>, Utils::Internal::MemberCallable<void (CppTools::SymbolSearcher::*)(QFutureInterface<Core::SearchResultItem>&)>&&) (futureInterface=..., function=...) at /home/jarek/dev/creator-master/src/libs/utils/runextensions.h:257 #8 0x00007f0141a5c77f in Utils::Internal::runAsyncMemberDispatch<Core::SearchResultItem, Utils::Internal::MemberCallable<void (CppTools::SymbolSearcher::*)(QFutureInterface<Core::SearchResultItem>&)>, , void>(QFutureInterface<Core::SearchResultItem>, Utils::Internal::MemberCallable<void (CppTools::SymbolSearcher::*)(QFutureInterface<Core::SearchResultItem>&)>&&) (futureInterface=..., function=...) at /home/jarek/dev/creator-master/src/libs/utils/runextensions.h:274 #9 0x00007f0141a5c6e5 in Utils::Internal::runAsyncImpl<Core::SearchResultItem, Utils::Internal::MemberCallable<void (CppTools::SymbolSearcher::*)(QFutureInterface<Core::SearchResultItem>&)>>(QFutureInterface<Core::SearchResultItem>, Utils::Internal::MemberCallable<void (CppTools::SymbolSearcher::*)(QFutureInterface<Core::SearchResultItem>&)>&&) (futureInterface=..., function=...) at /home/jarek/dev/creator-master/src/libs/utils/runextensions.h:303 #10 0x00007f0141a5c5fe in Utils::Internal::runAsyncMemberDispatch<Core::SearchResultItem, void (CppTools::SymbolSearcher::*)(QFutureInterface<Core::SearchResultItem>&), CppTools::SymbolSearcher*, , void>(QFutureInterface<Core::SearchResultItem>, void (CppTools::SymbolSearcher::*&&)(QFutureInterface<Core::SearchResultItem>&), CppTools::SymbolSearcher*&&) (futureInterface=..., function=@0x4eec858: &virtual table offset 96, obj=@0x4eec850: 0x2d7bc70) at /home/jarek/dev/creator-master/src/libs/utils/runextensions.h:285 #11 0x00007f0141a5c4a0 in Utils::Internal::runAsyncImpl<Core::SearchResultItem, void (CppTools::SymbolSearcher::*)(QFutureInterface<Core::SearchResultItem>&), CppTools::SymbolSearcher*> (futureInterface=..., function=@0x4eec858: &virtual table offset 96) at /home/jarek/dev/creator-master/src/libs/utils/runextensions.h:303 #12 0x00007f0141a5c244 in Utils::Internal::AsyncJob<Core::SearchResultItem, void (CppTools::SymbolSearcher::*)(QFutureInterface<Core::SearchResultItem>&), CppTools::SymbolSearcher*&>::runHelper<0ul, 1ul> (this=0x4eec840) at /home/jarek/dev/creator-master/src/libs/utils/runextensions.h:372 #13 0x00007f0141a5c082 in Utils::Internal::AsyncJob<Core::SearchResultItem, void (CppTools::SymbolSearcher::*)(QFutureInterface<Core::SearchResultItem>&), CppTools::SymbolSearcher*&>::run (this=0x4eec840) at /home/jarek/dev/creator-master/src/libs/utils/runextensions.h:352 #14 0x00007f015e0c4f6d in QThreadPoolThread::run (this=0x7f00dc455920) at /home/jarek/dev/qt-515/qtbase/src/corelib/thread/qthreadpool.cpp:100 #15 0x00007f015e0beed3 in QThreadPrivate::start (arg=0x7f00dc455920) at /home/jarek/dev/qt-515/qtbase/src/corelib/thread/qthread_unix.cpp:329 #16 0x00007f015d2a9299 in start_thread () from /lib64/libpthread.so.0 #17 0x00007f015db8f6a3 in clone () from /lib64/libc.so.6
Attachments
Issue Links
- is required for
-
QTCREATORBUG-25709 Reduce crashes on exit / session switch
-
- Closed
-