Find: Stop at the root item when updating the "checked" status

... of search result items.
Otherwise we're breaking assumptions elsewhere.

Fixes: QTCREATORBUG-25662
Change-Id: I9dce79bd58ada02988741741c09e4ce42cc7af03
Reviewed-by: Christian Stenger <christian.stenger@qt.io>